test/files/neg/t664.check
t664.scala:4: error: illegal cyclic reference involving trait Foo
  trait Foo extends super.Foo {
                          ^
t664.scala:5: error: illegal cyclic reference involving trait Bar
    trait Bar extends super.Bar;
                            ^
two errors found
